# napcat-login-watchdog

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
deploy/compose/: Dockerfile  docker-compose.example.yml
deploy/cron/: napcat-login-watchdog
deploy/reverse-proxy/: Caddyfile  nginx-watchdog-click.conf
deploy/systemd/: napcat-login-watchdog-click-venv.service  napcat-login-watchdog-click.service  napcat-login-watchdog-venv.service  napcat-login-watchdog.service  napcat-login-watchdog.timer
src/napcat_login_watchdog/: __init__.py  cli.py  config.py  doctor.py  health.py  mail.py  qr.py  runner.py  state.py  webhook.py
tests/: test_cli.py  test_config.py  test_doctor.py  test_health.py  test_qr_and_mail.py  test_state.py  test_watchdog.py
